force-app/main/default/objects/Knowledge__kav/fields/AI_Bypass_Audit_Log__c.field-meta.xml
<CustomField>
    <fullName>AI_Bypass_Audit_Log__c</fullName>
    <description>Stores a JSON log of bypassed AI consistency warnings including timestamp, user, and reason. Backs the "check &amp; publish" bypass flow on the Knowledge record page (KnowledgeAIGovernanceService). User-facing label is "KB Bypass Audit Log".</description>
    <label>KB Bypass Audit Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>