force-app/main/default/objects/Knowledge__kav/fields/Merged_Into__c.field-meta.xml
<CustomField>
    <fullName>Merged_Into__c</fullName>
    <description>Points to the Golden Record article that this article was merged into by consolidation. Used for KPI transition tracking and URL redirect strategy.</description>
    <label>Merged Into</label>
    <length>18</length>
    <type>Text</type>
</CustomField>