force-app/main/default/objects/Knowledge__kav/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <description>The user responsible for this Knowledge article content quality. Used for candidate inbox visibility sharing. Falls back to OwnerId when null.</description>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Responsible Knowledge Articles</relationshipLabel>
    <relationshipName>Responsible_Knowledge_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>